add pagination to catalog page

--- a/library3/src/style/home.css
+++ b/library3/src/style/home.css
@@ -23,3 +23,11 @@ main {
     text-align: end;
     margin: 10px;
   }
+
+
+  .container_{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
