--- a/library3/src/style/signup.css
+++ b/library3/src/style/signup.css
@@ -28,7 +28,8 @@ input {
     border-radius: 5px;
 }
 
-button {
+button,
+#btn {
     padding: 5px 10px;
     margin-top: 5px;
     font-size: 25px;
